fix: delete icon in dark mode

--- a/packages/excalidraw/components/TTDDialog/TTDDialog.scss
+++ b/packages/excalidraw/components/TTDDialog/TTDDialog.scss
@@ -4,6 +4,15 @@
 $verticalBreakpoint: 861px;
 
 .excalidraw {
+
+  &.theme--dark {
+    .ttd-chat-menu-item__delete {
+      svg {
+        color: var(--color-on-surface);
+      }
+    }
+  }
+
   .Modal.Dialog.ttd-dialog {
     padding: 1.25rem;
 
@@ -490,7 +499,6 @@ $verticalBreakpoint: 861px;
     }
 
     .ttd-chat-menu-item__delete {
-      background: none;
       border: none;
       padding: 0.25rem;
       cursor: pointer;
@@ -500,6 +508,7 @@ $verticalBreakpoint: 861px;
       display: flex;
       align-items: center;
       justify-content: center;
+      background: transparent;
 
       svg {
         width: 16px;
@@ -508,11 +517,6 @@ $verticalBreakpoint: 861px;
 
       &:hover {
         opacity: 1 !important;
-      }
-
-      svg {
-        width: 14px;
-        height: 14px;
       }
     }
   }
